Errores de navegacion

--- a/app/src/main/res/layout/activity_actividad_c.xml
+++ b/app/src/main/res/layout/activity_actividad_c.xml
@@ -7,4 +7,13 @@
     android:background="@color/purple_200"
     tools:context=".ActividadC">
 
+    <Button
+        android:id="@+id/botonR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REGRESAR A B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
